# goma-engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
apps/sample-app/: CMakeLists.txt  app_main.cpp
assets/shaders/: base.frag  base.vert  downscale.frag  fullscreen.vert  imgui.vert  pbr.frag  pbr.vert  postprocessing.frag  shadow.vert  skybox.frag  skybox.vert  upscale.frag
include/: engine.hpp
include/common/: error_codes.hpp  include.hpp  vez.hpp
include/infrastructure/: cache.hpp
include/input/: input.hpp  input_system.hpp
include/platform/: platform.hpp  win32_platform.hpp
include/renderer/: backend.hpp  handles.hpp  renderer.hpp
include/renderer/vez/: vez_backend.hpp  vez_context.hpp
include/scene/: assimp_loader.hpp  attachment.hpp  attachments.hpp  gen_index.hpp  node.hpp  scene.hpp  scene_loader.hpp
include/scene/attachments/: camera.hpp  light.hpp  material.hpp  mesh.hpp  texture.hpp
include/scene/loaders/: assimp_loader.hpp
include/scripting/: script.hpp  scripting_system.hpp
include/scripting/scripts/: fly_camera.hpp
modules/: CMakeLists.txt
modules/common/: CMakeLists.txt  hash.cpp
modules/common/include/common/: error_codes.hpp  gen_vector.hpp  hash.hpp  include.hpp  vulkan.hpp
modules/engine/: CMakeLists.txt  engine.cpp
modules/engine/include/engine/: engine.hpp
modules/input/: CMakeLists.txt  input_system.cpp
modules/platform/: CMakeLists.txt  platform.cpp  win32_platform.cpp
modules/platform/include/platform/: platform.hpp  win32_platform.hpp
modules/renderer/: CMakeLists.txt  buffer.cpp  context.cpp  device.cpp  image.cpp  pipeline.cpp  renderer.cpp  rendering_pipeline.cpp  sampler.cpp  shader.cpp  utils.cpp  vez_backend.cpp
modules/renderer/include/renderer/: buffer.hpp  context.hpp  device.hpp  handles.hpp  image.hpp  pipeline.hpp  renderer.hpp  rendering_pipeline.hpp  sampler.hpp  shader.hpp
modules/renderer/include/renderer/pipelines/: forward_pipeline.hpp
modules/renderer/include/renderer/vulkan/: buffer.hpp  context.hpp  device.hpp  image.hpp  pipeline.hpp  sampler.hpp  shader.hpp  utils.hpp
modules/renderer/pipelines/: forward_pipeline.cpp
modules/rhi/: CMakeLists.txt  utils.cpp
modules/rhi/include/rhi/: buffer.hpp  context.hpp  device.hpp  image.hpp  pipeline.hpp  sampler.hpp  shader.hpp  utils.hpp
modules/rhi/include/rhi/vulkan/: buffer.hpp  context.hpp  device.hpp  image.hpp  pipeline.hpp  sampler.hpp  shader.hpp
modules/rhi/vulkan/: buffer.cpp  context.cpp  device.cpp  image.cpp  pipeline.cpp  sampler.cpp  shader.cpp  utils.cpp
modules/scene/: CMakeLists.txt  assimp_loader.cpp  scene.cpp  utils.cpp
modules/scene/include/scene/: attachment.hpp  gen_index.hpp  node.hpp  scene.hpp  scene_loader.hpp  utils.hpp
modules/scene/include/scene/attachments/: camera.hpp  light.hpp  material.hpp  mesh.hpp  texture.hpp
modules/scene/include/scene/loaders/: assimp_loader.hpp
modules/scripting/: CMakeLists.txt
modules/scripting/include/scripting/: script.hpp  scripting_system.hpp
modules/scripting/include/scripting/scripts/: fly_camera.hpp
scripts/cmake/: add_module.cmake
src/: engine.cpp  main.cpp
src/platform/: win32_platform.cpp
src/renderer/: renderer.cpp
src/renderer/vez/: vez_backend.cpp
src/scene/: assimp_loader.cpp  scene.cpp
tests/: engine_tests.cpp  goma_tests.hpp  infrastructure_tests.cpp  rendering_abstraction_tests.cpp  rhi_tests.cpp  scene_tests.cpp  test_main.cpp  tests.cpp
